Tue Nov 26 03:43:15 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/pt_BR.po: New from Translation Project.
	* po/LINGUAS: Add pt_BR.

Fri Nov 22 22:06:01 GMT 2002  Morten Brix Pedersen  <morten@wtf.dk>

	* po/da.po: Further updates.

Sat Nov 16 12:54:29 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* docs/manpage.example: Clarify that dashes in options should be
	  written using '\-', not '-'.

Thu Nov 14 23:29:14 GMT 2002  Morten Brix Pedersen  <morten@wtf.dk>

	* po/da.po: Update.

Thu Nov 14 23:26:58 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* configure.in: Implement --enable-undoc=COMMAND.
	* src/man.c (gripe_no_man): If --enable-undoc=COMMAND was set, print
	  an additional message referring users to COMMAND. This is mostly
	  here to support Debian's undocumented(7) page in a nicer way, but
	  perhaps others will find it useful too.

Thu Nov 14 04:21:09 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.in: Use @LIBINTL@ rather than @INTLLIBS@. The latter
	  is deprecated.

Thu Nov 14 04:17:49 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po,
	  po/it.po, po/ja.po, po/sv.po: Update with msgmerge.

Thu Nov 14 04:10:44 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4, configure.in: Include documentation in all calls to
	  AC_DEFINE and AC_DEFINE_UNQUOTED. Look for acinclude.m4 in
	  AC_CONFIG_SRCDIR rather than acconfig.h.
	* acconfig.h: Remove; the above makes it unnecessary.
	* GNUmakefile.in: Remove acconfig.h from stamp-h.in's dependencies.

	* autogen.sh: Run autopoint, not gettextize. autogen.sh no longer
	  takes an optional --copy argument.

Thu Nov 14 04:06:41 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/.cvsignore: Add messages.mo and remove-potcdate.sed.
	* po/it.po: Add missing '=' in charset.

Thu Nov 14 03:53:22 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/cs.po: Fix an incorrect C format string.