@@ -5,5 +5,6 @@ autom4te.cache
 config.log
 config.status
 configure
+m4
 makefile
 stamp-h*
